<?xml version="1.0"?>
<package format="2">
  <name>ercr_msgs</name>
  <version>0.0.0</version>
  <description>ercr_msgs provides ROS message definitions used in the ERCR project.</description>

  <maintainer email="lpimentel3@gatech.edu">Luis Pimentel</maintainer>
  <author email="lpimentel3@gatech.edu">Luis Pimentel</author>
  <!-- <url type="website">http://wiki.ros.org/ercr_msgs</url> -->

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
</package>
